--- a/src/components/molecules/GridImage/GridImage.module.scss
+++ b/src/components/molecules/GridImage/GridImage.module.scss
@@ -3,9 +3,9 @@
 }
 
 .image {
-  @apply h-[120px] md:h-[240px] w-auto m-auto;
+  @apply h-[200px] md:h-[220px] w-auto m-auto;
 }
 
 .subheading {
-  @apply font-bold text-[20px] md:text-[24px] py-2 px-6;
+  @apply font-bold text-[20px] md:text-[24px] py-2 px-6 leading-7;
 }
