--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -3,7 +3,7 @@
   border-radius: 10px;
   color: white;
   font-size: 20px;
-  padding: 12px;
+  padding: 12px 18px;
   font-weight: 500;
   transition-duration: 0.5s;
 }
