--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -36,3 +36,8 @@
   @apply absolute top-1/2 left-1/2;
   transform: translate(-50%, -50%);
 }
+
+.slick-track {
+  display: flex !important;
+  align-items: center;
+}
