--- a/src/components/organisms/Testimonial/Testimonial.module.scss
+++ b/src/components/organisms/Testimonial/Testimonial.module.scss
@@ -1,8 +1,8 @@
 .wrap {
-  @apply container m-auto py-20 px-6 text-center;
+  @apply max-w-[1400px] m-auto py-20 px-3 md:px-10 text-center;
 
   & .heading {
-    @apply py-20;
+    @apply py-10 md:py-20;
   }
 
   & h2.title {
@@ -14,6 +14,6 @@
   }
 
   & .body {
-    @apply py-20;
+    @apply md:py-10;
   }
 }
