--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -1,9 +1,9 @@
 .btn {
+  @apply py-[12px] md:py-[15px] px-[18px] md:px-[25px];
   background: linear-gradient(90deg, #c8134f 0%, #ee5386 100%);
   border-radius: 10px;
   color: white;
   font-size: 20px;
-  padding: 12px 18px;
   font-weight: 500;
   transition-duration: 0.5s;
 }
