--- a/src/components/molecules/Grid32/Grid32.module.scss
+++ b/src/components/molecules/Grid32/Grid32.module.scss
@@ -2,18 +2,18 @@
   @apply flex flex-wrap justify-center text-center;
 
   & li {
-    @apply md:w-1/2 lg:w-1/3 py-8;
+    @apply md:w-1/2 lg:w-1/3 py-4;
 
     & img {
       @apply m-auto;
     }
 
     & .subheading {
-      @apply text-body font-bold py-4;
+      @apply text-lg md:text-body font-bold py-4;
     }
 
     & .text {
-      @apply text-body max-w-[260px] m-auto;
+      @apply text-lg md:text-body max-w-[260px] m-auto;
     }
   }
 }
