--- a/src/components/molecules/GridImage/GridImage.module.scss
+++ b/src/components/molecules/GridImage/GridImage.module.scss
@@ -1,5 +1,5 @@
 .wrap {
-  @apply grid text-center items-center;
+  @apply grid text-center items-center text-[20px] md:text-[24px] px-6;
 }
 
 .image {
@@ -7,5 +7,9 @@
 }
 
 .subheading {
-  @apply font-bold text-[20px] md:text-[24px] py-2 px-6 leading-7;
+  @apply font-bold py-2  leading-7;
+}
+
+.text {
+  @apply max-w-[350px] m-auto;
 }
