--- a/src/components/molecules/TextHeading/TextHeading.module.scss
+++ b/src/components/molecules/TextHeading/TextHeading.module.scss
@@ -3,7 +3,7 @@
 }
 
 .heading {
-  @apply text-4xl md:text-head font-bold text-[#1f1a3d] tracking-normal max-w-screen-lg m-auto;
+  @apply text-4xl md:text-head font-bold text-[#1f1a3d] tracking-normal;
 }
 
 .subheading {
