--- a/src/components/organisms/Testimonial/Testimonial.module.scss
+++ b/src/components/organisms/Testimonial/Testimonial.module.scss
@@ -2,7 +2,7 @@
   @apply max-w-[1400px] m-auto py-20 px-3 md:px-10 text-center;
 
   & .heading {
-    @apply py-10 md:py-20;
+    @apply py-10 md:py-20 max-w-[1200px];
   }
 
   & h2.title {
