--- a/src/components/molecules/SeePlans/SeePlans.module.scss
+++ b/src/components/molecules/SeePlans/SeePlans.module.scss
@@ -2,7 +2,12 @@
   @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center;
 
   & li {
-    @apply py-4;
+    @apply py-4 duration-500;
+    pointer-events: auto;
+  }
+  & li:hover {
+    @apply rounded-xl duration-500;
+    box-shadow: rgb(0 0 0 / 10%) 0px 13px 80px 0px;
   }
 }
 
