--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -9,10 +9,7 @@
 }
 
 .btn:hover {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  background: linear-gradient(270deg, #c8134f 0%, #ee5386 100%);
 }
 
 .cta {
@@ -50,4 +47,33 @@
 .ariaExpanded svg {
   transform: rotate(90deg) !important;
   transition: all 0.4s;
+}
+
+.btn_quote {
+  @apply py-[12px] md:py-[15px] px-[18px] md:px-[25px];
+  background: linear-gradient(90deg, #c8134f 0%, #ee5386 100%);
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  transition-duration: 0.5s;
+}
+.btn_quote:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+}
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(2vh);
+  visibility: hidden;
+  transition: opacity 1200ms ease-out, transform 600ms ease-out, visibility 1200ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
