--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -72,7 +72,22 @@
   transition: opacity 1200ms ease-out, transform 600ms ease-out, visibility 1200ms ease-out;
   will-change: opacity, transform, visibility;
 }
+
 .fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(10vh);
+  visibility: hidden;
+  transition: opacity 1200ms ease-out, transform 600ms ease-out, visibility 1200ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+
+.fade-in.is-visible {
   opacity: 1;
   transform: none;
   visibility: visible;
