--- a/src/components/organisms/Hero/Hero.module.scss
+++ b/src/components/organisms/Hero/Hero.module.scss
@@ -3,8 +3,7 @@
 }
 
 .wrap {
-  @apply text-center text-white w-full;
-  max-width: 1042px;
+  @apply text-center text-white w-full max-w-[1082px];
 }
 
 .heading {
