--- a/src/components/organisms/Covered/Covered.module.scss
+++ b/src/components/organisms/Covered/Covered.module.scss
@@ -1,5 +1,10 @@
 .wrap {
   @apply bg-[#F5F4FA] pt-20 md:pt-32 px-2;
+
+  & .head {
+    @apply max-w-screen-xl m-auto;
+  }
+
   & .body {
     @apply py-10 md:py-20;
     & img {
