--- a/src/components/organisms/Taste/Taste.module.scss
+++ b/src/components/organisms/Taste/Taste.module.scss
@@ -25,8 +25,8 @@
     & .footer {
       @apply text-center pt-4 md:pt-10;
 
-      & svg {
-        @apply m-auto  my-4 md:my-10;
+      & img {
+        @apply m-auto  my-4 md:my-4 pb-6;
       }
 
       & a {
