--- a/src/components/organisms/Backed/Backed.module.scss
+++ b/src/components/organisms/Backed/Backed.module.scss
@@ -3,9 +3,9 @@
 }
 
 .heading {
-  @apply py-10 md:py-20 max-w-[1170px] m-auto;
+  @apply py-10 max-w-[1170px] m-auto;
 }
 
 .body {
-  @apply py-10 md:py-20 max-w-[650px] m-auto;
+  @apply py-10 max-w-[650px] m-auto;
 }
