--- a/src/components/organisms/HowItWorks/HowItWorks.module.scss
+++ b/src/components/organisms/HowItWorks/HowItWorks.module.scss
@@ -3,9 +3,9 @@
 }
 
 .heading {
-  @apply max-w-[1180px] m-auto pt-20 md:pt-40;
+  @apply max-w-[1180px] m-auto pt-20 md:pt-32;
 }
 
 .body {
-  @apply pt-10 md:py-20;
+  @apply pt-10;
 }
