--- a/src/components/molecules/DramaGrid/DramaGrid.module.scss
+++ b/src/components/molecules/DramaGrid/DramaGrid.module.scss
@@ -35,5 +35,5 @@
 }
 
 .subheading {
-  @apply font-bold text-[20px] md:text-[24px] py-2 px-6 leading-7 text-[#1F1A3D];
+  @apply font-bold text-body py-2 px-6 leading-7 text-[#1F1A3D];
 }
