--- a/src/components/molecules/Grid32/Grid32.module.scss
+++ b/src/components/molecules/Grid32/Grid32.module.scss
@@ -2,7 +2,7 @@
   @apply flex flex-wrap justify-center text-center;
 
   & li {
-    @apply md:w-1/2 lg:w-1/3 py-4;
+    @apply md:w-1/2 lg:w-1/3 py-4 opacity-70;
 
     & img {
       @apply m-auto;
@@ -15,5 +15,8 @@
     & .text {
       @apply text-lg md:text-body max-w-[260px] m-auto;
     }
+  }
+  & li:hover {
+    @apply opacity-100;
   }
 }
