--- a/src/components/organisms/NotPsychic/NotPsychic.module.scss
+++ b/src/components/organisms/NotPsychic/NotPsychic.module.scss
@@ -2,10 +2,14 @@
   @apply relative;
 
   & .wrap {
-    @apply py-20 md:py-40 px-2;
+    @apply py-20 px-2;
 
     & .head {
-      @apply max-w-[1200px] m-auto py-10;
+      @apply max-w-[1100px] m-auto py-10;
+
+      & p {
+        @apply pt-8;
+      }
     }
 
     & .body {
