--- a/src/components/organisms/StopAt/StopAt.module.scss
+++ b/src/components/organisms/StopAt/StopAt.module.scss
@@ -2,11 +2,11 @@
   @apply py-20 md:py-32 px-4;
 
   & .head {
-    @apply pt-4 md:pt-20 max-w-screen-xl m-auto;
+    @apply pt-4 md:pt-10 max-w-5xl m-auto;
   }
 
   & .body {
-    @apply pt-4 md:pt-24 max-w-screen-2xl m-auto;
+    @apply pt-4 md:pt-10 max-w-screen-2xl m-auto;
 
     & img {
       @apply w-[170px] md:w-[220px] h-auto;
