--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -50,11 +50,11 @@
 }
 
 .btn_quote {
-  @apply py-[12px] md:py-[15px] px-[18px] md:px-[25px];
+  @apply md:py-[10px] md:px-[15px];
   background: linear-gradient(90deg, #c8134f 0%, #ee5386 100%);
   border-radius: 10px;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   transition-duration: 0.5s;
 }
@@ -95,4 +95,18 @@
 
 .active svg {
   transform: rotate(90deg);
+}
+
+.left-to-right {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 1200ms ease-out, transform 1200ms ease-out, visibility 1200ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+
+.left-to-right.animation {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
