--- a/src/components/molecules/RichText/RichText.module.scss
+++ b/src/components/molecules/RichText/RichText.module.scss
@@ -3,7 +3,7 @@
 }
 
 .heading {
-  @apply text-4xl md:text-title font-semibold text-[#1f1a3d] tracking-normal max-w-4xl m-auto;
+  @apply text-mobilehead md:text-title font-semibold text-[#1f1a3d] tracking-normal max-w-4xl m-auto;
   letter-spacing: -2px;
 }
 
