--- a/src/components/organisms/AppSection/AppSection.module.scss
+++ b/src/components/organisms/AppSection/AppSection.module.scss
@@ -7,7 +7,7 @@
 }
 
 .heading {
-  @apply text-4xl md:text-title text-white font-semibold max-w-5xl m-auto  py-20 px-5;
+  @apply text-mobilehead md:text-title text-white font-semibold max-w-5xl m-auto  py-20 px-5;
 }
 
 .imgWrap {
