--- a/src/components/organisms/NotPsychic/NotPsychic.module.scss
+++ b/src/components/organisms/NotPsychic/NotPsychic.module.scss
@@ -27,7 +27,7 @@
         }
 
         & img {
-          @apply h-[150px] md:h-auto pb-2;
+          @apply h-40 md:h-44 pb-2;
         }
       }
     }
