--- a/src/components/organisms/PretzelMean/PretzelMean.module.scss
+++ b/src/components/organisms/PretzelMean/PretzelMean.module.scss
@@ -7,7 +7,7 @@
 }
 
 .title {
-  @apply text-4xl md:text-head font-bold text-[#1f1a3d] tracking-normal m-auto;
+  @apply text-mobilehead md:text-head font-bold text-[#1f1a3d] tracking-normal m-auto;
 }
 
 .heading {
