--- a/src/components/organisms/TeamFaq/TeamFaq.module.scss
+++ b/src/components/organisms/TeamFaq/TeamFaq.module.scss
@@ -6,7 +6,7 @@
 
     & .faq {
       & .title {
-        @apply text-2xl md:text-[32px] font-bold text-[#25122A] py-4 md:py-10;
+        @apply text-2xl md:text-[32px] font-semibold text-[#25122A] py-4 md:py-10;
       }
     }
   }
