--- a/src/components/molecules/Grid32/Grid32.module.scss
+++ b/src/components/molecules/Grid32/Grid32.module.scss
@@ -2,10 +2,10 @@
   @apply flex flex-wrap justify-center text-center;
 
   & li {
-    @apply md:w-1/2 lg:w-1/3 py-4 opacity-70;
+    @apply md:w-1/2 lg:w-1/3 py-2;
 
     & img {
-      @apply m-auto;
+      @apply m-auto h-40 md:h-48;
     }
 
     & .subheading {
@@ -15,8 +15,5 @@
     & .text {
       @apply text-lg md:text-body max-w-[260px] m-auto;
     }
-  }
-  & li:hover {
-    @apply opacity-100;
   }
 }
