--- a/src/components/molecules/TextSubHeading/TextSubHeading.module.scss
+++ b/src/components/molecules/TextSubHeading/TextSubHeading.module.scss
@@ -2,7 +2,7 @@
   @apply text-center;
 
   & .heading {
-    @apply text-4xl md:text-title font-semibold text-[#1f1a3d] tracking-normal;
+    @apply text-[34px] md:text-title font-semibold text-[#1f1a3d] tracking-normal;
     letter-spacing: -2px;
 
     & h2 {
@@ -11,6 +11,6 @@
   }
 
   & .body {
-    @apply text-[#676477] text-[18px] md:text-[24px] font-bold pt-4;
+    @apply text-[#676477] text-body md:text-subhead font-semibold pt-4;
   }
 }
