--- a/src/components/organisms/DgtT/DgtT.module.scss
+++ b/src/components/organisms/DgtT/DgtT.module.scss
@@ -5,6 +5,7 @@
     @apply max-w-screen-xl m-auto py-24 md:py-40 px-3;
 
     & .head {
+      @apply max-w-5xl m-auto mb-10;
     }
 
     & .body {
