--- a/src/components/organisms/Hero/Hero.module.scss
+++ b/src/components/organisms/Hero/Hero.module.scss
@@ -7,7 +7,7 @@
 }
 
 .heading {
-  @apply text-4xl md:text-head font-[500] py-3 px-6;
+  @apply text-mobilehead md:text-head font-[500] py-3 px-6;
 }
 
 .text {
