--- a/src/components/organisms/Mention/Mention.module.scss
+++ b/src/components/organisms/Mention/Mention.module.scss
@@ -5,7 +5,7 @@
     @apply max-w-screen-2xl m-auto px-2 pb-20 md:pb-32;
 
     & .head {
-      @apply max-w-[1145px]  m-auto;
+      @apply max-w-screen-lg m-auto;
 
       & .text {
         @apply py-4 max-w-xl m-auto;
@@ -13,7 +13,7 @@
     }
 
     & .body {
-      @apply pt-8 md:pt-14;
+      @apply pt-8;
 
       & ul {
         @apply items-baseline;
