--- a/src/components/organisms/Terms/Terms.module.scss
+++ b/src/components/organisms/Terms/Terms.module.scss
@@ -12,27 +12,26 @@
       @apply py-14 md:py-20 max-w-screen-2xl m-auto;
 
       & .bodyInner {
-        @apply md:grid md:gap-x-8 lg:gap-x-12;
-        grid-template-columns: 1fr 3fr;
-
         & .nav {
-          @apply hidden md:block text-[#1F1A3D] text-center sticky top-0;
+          @apply hidden md:block text-[#1F1A3D] text-center sticky top-20 w-1/4 float-left md:pr-4 lg:pr-20;
         }
 
         & .content {
+          @apply w-full md:w-3/4 md:ml-[25%];
           & .block {
             @apply pb-10 md:pb-14;
 
             & .bold {
-              @apply text-[#1F1A3D] text-lg md:text-xl lg:text-2xl font-semibold;
+              @apply text-[#1F1A3D] text-lg md:text-xl font-semibold;
             }
 
             & .semi {
-              @apply text-[#1F1A3D] text-lg md:text-xl lg:text-2xl pb-6;
+              @apply text-[#1F1A3D] text-lg md:text-xl pb-6;
             }
 
             & .text {
-              @apply text-[#676477] text-lg md:text-xl lg:text-2xl;
+              @apply text-[#676477] text-lg;
+              line-height: 32px !important;
             }
           }
         }
