--- a/src/components/organisms/WhatYouSee/WhatYouSee.module.scss
+++ b/src/components/organisms/WhatYouSee/WhatYouSee.module.scss
@@ -1,5 +1,5 @@
 .root {
-  @apply pt-10 md:pt-40;
+  @apply pt-10 md:pt-32;
 
   & .wrap {
     @apply px-6 m-auto py-20 max-w-[1440px];
@@ -31,11 +31,11 @@
         @apply grid md:grid-cols-3;
 
         & img {
-          @apply m-auto;
+          @apply m-auto h-48 md:h-52;
         }
 
         & .title {
-          @apply text-center text-[#EE2E64] text-3xl md:text-5xl font-bold md:py-5;
+          @apply text-center text-[#EE2E64] text-2xl md:text-3xl font-bold md:py-5;
         }
       }
 
