--- a/src/styles/_primary.scss
+++ b/src/styles/_primary.scss
@@ -99,13 +99,27 @@
 
 .left-to-right {
   opacity: 0;
-  transform: translateY(20vh);
+  transform: translateY(40vh);
+  visibility: hidden;
+  transition: opacity 2400ms ease-out, transform 2400ms ease-out, visibility 2400ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+
+.left-to-right.animation {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+.car-section {
+  opacity: 0;
+  transform: translateX(80vw);
   visibility: hidden;
   transition: opacity 1200ms ease-out, transform 1200ms ease-out, visibility 1200ms ease-out;
   will-change: opacity, transform, visibility;
 }
 
-.left-to-right.animation {
+.car-section.is-visible {
   opacity: 1;
   transform: none;
   visibility: visible;
