--- a/src/components/molecules/PrimaryMenu/PrimaryMenu.module.scss
+++ b/src/components/molecules/PrimaryMenu/PrimaryMenu.module.scss
@@ -24,7 +24,7 @@
 
 .subnav {
   @apply absolute lg:w-[950px] xl:w-[1200px] left-[-250px] z-50 bg-[#F5F4FA] top-10 p-6 rounded-[20px] overflow-hidden;
-  // transform: scaleY(0);
+  transform: scaleY(0);
   transform-origin: top;
   transition: all 0.3s ease;
 
