--- a/src/components/molecules/DramaGrid/DramaGrid.module.scss
+++ b/src/components/molecules/DramaGrid/DramaGrid.module.scss
@@ -5,9 +5,9 @@
     @apply relative my-12 md:my-10;
   }
 
-  & li:hover::before {
-    @apply animate-waving-hand;
-  }
+  // & li:hover::before {
+  //   @apply animate-waving-hand;
+  // }
 
   & li:first-child::before {
     @apply content-[''] h-[50px] right-[20px] top-[-30px] w-[175px] md:absolute ml-[42%] z-10 block bg-no-repeat;
