--- a/src/components/molecules/PostCard/PostCard.module.scss
+++ b/src/components/molecules/PostCard/PostCard.module.scss
@@ -5,18 +5,18 @@
     @apply text-center px-6 py-6;
 
     & .title {
-      @apply text-[#25122A] text-2xl font-bold;
+      @apply text-[#25122A] text-2xl font-bold min-h-[60px] break-words line-clamp-2 leading-none;
     }
 
     & .content {
-      @apply text-[#1F1A3D] text-lg indent-1;
+      @apply text-[#1F1A3D] text-lg indent-1 mb-2 line-clamp-4 min-h-[110px];
     }
 
     & .btn {
       @apply text-[#E4255C] text-lg font-bold;
     }
     & .social {
-      @apply flex;
+      @apply flex items-center;
 
       & a {
         @apply px-1;
